--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="High-quality leads for builders and contractors in Multan, Pakistan">
-    <title>BuildEasy Solutions - High-Quality Leads for Builders</title>
+    <title>EMaymar - High-Quality Leads for Builders</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -18,7 +18,11 @@
             background: linear-gradient(to right, #1a3c5e, #2a5c8e);
             color: white;
             text-align: center;
-            padding: 4rem 1rem;
+            padding: 2rem 1rem;
+        }
+        header img {
+            max-width: 200px;
+            margin-bottom: 1rem;
         }
         header h1 {
             font-size: 3rem;
@@ -105,6 +109,9 @@
             header p {
                 font-size: 1rem;
             }
+            header img {
+                max-width: 150px;
+            }
             .container {
                 padding: 1rem;
             }
@@ -113,18 +120,19 @@
 </head>
 <body>
     <header>
-        <h1>Grow Your Construction Business with BuildEasy Solutions</h1>
+        <img src="logo.png" alt="EMaymar Logo">
+        <h1>Grow Your Construction Business with EMaymar?</h1>
         <p>Get 8 High-Quality Leads Per Month in Multan, or You Don’t Pay!</p>
         <a href="#contact" class="cta-button">Claim Your Leads Now</a>
     </header>
     <div class="container">
         <div class="section">
-            <h2>Why Builders in Multan Choose Us</h2>
+            <h2>Why Builders in Multan Choose EMaymar</h2>
             <p>We understand the challenges you face: inconsistent lead flow, building a strong brand, and managing your online reputation. Our targeted social media campaigns deliver high-quality leads from clients in Multan, Punjab, ready to hire for construction and renovation projects.</p>
         </div>
         <div class="section form-section" id="contact">
             <h2>Contact Us to Start Growing</h2>
-            <form action="mailto:contact@buildeasysolutions.com" method="post" enctype="text/plain">
+            <form action="mailto:contact@emaymar.com" method="post" enctype="text/plain">
                 <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your Email" required>
                 <input type="tel" name="phone" placeholder="Your Phone Number" required>
@@ -134,7 +142,7 @@
         </div>
     </div>
     <footer>
-        <p>© 2025 BuildEasy Solutions. Serving Multan, Punjab, Pakistan. <a href="mailto:contact@buildeasysolutions.com">Contact Us</a></p>
+        <p>© 2025 EMaymar. Serving Multan, Punjab, Pakistan. <a href="mailto:contact@emaymar.com">Contact Us</a></p>
     </footer>
 </body>
 </html>
