--- a/index.html
+++ b/index.html
@@ -158,27 +158,28 @@
     <header>
         <img src="logo.png" alt="EMaymar Logo">
         <h1>Grow Your Construction Business with EMaymar</h1>
-        <p>Get 8 High-Quality Leads Per Month in Multan, or You Don’t Pay!</p>
+        <p>Get 8 High-Quality Leads Per Month, or You Don’t Pay!</p>
         <a href="#contact" class="cta-button">Claim Your Leads Now</a>
     </header>
     <div class="container">
         <div class="section value-prop">
-            <h2>Why EMaymar is Your Growth Partner</h2>
-            <p>We tackle your biggest challenges: inconsistent lead flow, weak branding, and online reputation management. Our targeted social media campaigns deliver high-quality leads from Multan, Punjab, clients ready for construction and renovation projects.</p>
+            <h2>Why Consider EMaymar as Your Growth Partner</h2>
+            <p>We tackle your biggest challenges: inconsistent lead flow, weak branding, and online reputation management. Our targeted social media campaigns deliver high-quality leads from clients ready for construction and renovation projects.</p>
             <ul>
                 <li>Guaranteed 8 qualified leads per month or no payment.</li>
-                <li>Localized strategies for Multan’s construction market.</li>
-                <li>Save time with our lead generation expertise.</li>
+                <li>Localized Social Media Strategies for Your Business.</li>
+                <li>Save Time with our lead generation expertise.</li>
                 <li>Boost your brand with professional support.</li>
             </ul>
         </div>
         <div class="section testimonials">
             <h2>What Our Clients Say</h2>
-            <p>"EMaymar transformed our lead flow! We got 8 solid clients in the first month." – <strong>Ali Khan, Multan Builder</strong></p>
-            <p>"Finally, a service that understands our needs in Punjab. Highly recommend!" – <strong>Sara Ahmed, Contractor</strong></p>
+            <p>"EMaymar transformed our lead flow! We got 2 solid clients in the first month." – <strong>Ali Khan, Multan Builder</strong></p>
+            <p>"Finally, a service that helped my struggling business with inconsistent workflow. Highly recommend!" – <strong>Sara Ahmed, Contractor</strong></p>
         </div>
         <div class="section form-section" id="contact">
-            <h2>Contact EMaymar to Start Growing</h2>
+            <h2>Contact Now! and get 10 quote ready leads in the first month or simply just don't pay</h2>
+            <h3>Grow with EMaymar Now!</h3>
             <form action="mailto:contact@emaymar.com" method="post" enctype="text/plain">
                 <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your Email" required>
