--- a/index.html
+++ b/index.html
@@ -265,13 +265,14 @@
         <div class="section testimonials">
             <h2>What Our Clients Say</h2>
             <p>"EMaymar transformed our lead flow! We got 8 solid clients in the first month." – <strong>Ali Khan, Multan Builder</strong></p>
-            <p>"Finally, a Professional Service that understands construction business needs. Highly recommend!" – <strong>Sara Ahmed, Contractor</strong></p>
+            <p>"Finally, a Professional Service that understands construction business needs. Highly recommend!" – <strong>Sara Ahmed, Renovator</strong></p>
         </div>
         <div class="section form-section" id="contact">
             <h2>Contact EMaymar Now to Start Growing</h2>
             <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
                 <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your Email" required>
+                <input type="Location" name="city, area, street etc" placeholder="Your Location here" required>
                 <input type="tel" name="phone" placeholder="Your Phone Number" required>
                 <textarea name="message" placeholder="Tell us about your construction needs" rows="5" required></textarea>
                 <button type="submit">Get Your 8 Leads</button>
